--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <br>
 <br>  <br>
 <br>
-<a href="https://yogiyo.onelink.me/BlI7?pid=bridge_page" >Naver App link test</a>
+<!-- <a href="https://yogiyo.onelink.me/BlI7?pid=bridge_page" >Naver App link test</a> -->
+<div style=" background-color: gold; padding:10px; width: 300px; height: auto; cursor: pointer;" onclick="location.href='https://yogiyo.onelink.me/BlI7?pid=bridge_page&c=test&af_adset=test&af_keywords=test&label=test&gclid=test&af_dp=yogiyoapp%3A%2F%2Fopen%3Freferrer%3D';">
 
-
-<script>
+<!-- <script>
 !function(t,e,n,s,a,c,i,o,p){t.AppsFlyerSdkObject=a,t.AF=t.AF||function(){(t.AF.q=t.AF.q||[]).push([Date.now()].concat(Array.prototype.slice.call(arguments)))},t.AF.id=t.AF.id||i,t.AF.plugins={},o=e.createElement(n),p=e.getElementsByTagName(n)[0],o.async=1,o.src="https://websdk.appsflyer.com?"+(c.length>0?"st="+c.split(",").sort().join(",")+"&":"")+(i.length>0?"af_id="+i:""),p.parentNode.insertBefore(o,p)}(window,document,"script",0,"AF","banners",{banners: {key: "842fe190-b2ba-4e41-9fd1-4bda662db9b7"}})
 AF('banners', 'showBanner')
-</script>
+</script> -->
 </html>
 
 
