--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <head>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryjs/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3.min.js"></script>
   </head>
   <title>HTML Tutorial</title>
 <body>
