--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <head>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-1.7.1.min.js" type="text/javascript"></script>
   </head>
   <title>HTML Tutorial</title>
 <body>
