--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 <div style=" background-color: red; padding:10px; width: 300px; height: auto; cursor: pointer;" onclick="window.location.href='https://yogiyo.onelink.me/BlI7?pid=bridge_page&c=&af_adset=&af_keywords=&label=&gclid=&af_dp=yogiyoapp%3A%2F%2Fopen%3Freferrer%3D';">그냥 onclick으로 windows.location.href</div>
 <br>
 <br>
+<div style=" background-color: blue; padding:10px; width: 300px; height: auto; cursor: pointer;" onclick="window.location.href='https://www.google.com';">그냥 onclick으로 windows.location.href</div>
+<br>
 <a href="#" target="_blank">
       <div class="Promotion_btn" onclick="clickLink()">
         <div class="btn_content">a href랑 같이</div>
@@ -33,9 +35,11 @@
 </a>
 <br>
 <br>
-  <div class="Promotion_btn" onclick="clickLink()">
+<div class="Promotion_btn" onclick="clickLink()">
   <div class="btn_content">a href 없이</div>
 </div>
+<br>
+<br>
 
   <script type="text/javascript">
       var urlParam = window.location.search.replace(/^\?/, '');
