--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
   <br>
   <br>
   <a href="#" target="_blank">
-    <div style=" background-color: blue; padding:10px; width: 300px; height: auto; cursor: pointer;" onclick="window.location.href='https://yogiyo.onelink.me/BlI7?pid=bridge_page&c=&af_adset=&af_keywords=&label=&gclid=&af_dp=yogiyoapp%3A%2F%2Fopen%3Freferrer%3D';">div inside a with windows.location.href to onelink</div>
+    <div style=" background-color: yellow; padding:10px; width: 300px; height: auto; cursor: pointer;" onclick="window.location.href='https://yogiyo.onelink.me/BlI7?pid=bridge_page&c=&af_adset=&af_keywords=&label=&gclid=&af_dp=yogiyoapp%3A%2F%2Fopen%3Freferrer%3D';">div inside a with windows.location.href to onelink</div>
   </a>
+  <br>  
+  <br>
   <a href="#" target="_blank">
     <div style=" background-color: blue; padding:10px; width: 300px; height: auto; cursor: pointer;" onclick="window.location.href='https://www.google.com';">div inside a with windows.location.href to "Google"</div>
   </a>
