--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
   </div>
   <br>
   <br>
-  
+  <br>
+  <li role="presentation"><a role="deepLinkItem" href="https://bit.ly/3m5uDEs">딥링크</a></li>
+  <br>
+  <br>
+  <br>
+  <li role="presentation"><a role="deepLinkItem" href="cjmallapp://web|http%3A%2F%2Fdisplay.cjmall.com%2Fm%2FhomeTab%2Fmain%3FhmtabMenuId%3D002302%26rPIC%3Dcelebshop%26infl_cd%3DI4255">CJENM Case 2</a></li><br>
+  <br>
 <!-- Yogiyo's JS script -->
   <script type="text/javascript">
       var urlParam = window.location.search.replace(/^\?/, '');
