--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <br>
   <br>
   <br>
-  <li role="presentation"><a role="deepLinkItem" href="https://bit.ly/3m5uDEs">딥링크</a></li>
+  <li role="presentation"><a role="deepLinkItem" href="https://bit.ly/3m5uDEs">CJENM Case 1</a></li>
   <br>
   <br>
   <br>
